# api/requests/poll_requests.go
@@ -1,0 +1,7 @@
+package requests
+
+type CreatePollRequest struct {
+	Title      string   `json:"title"`
+	ExpiresAt  string   `json:"expires_at"`
+	Categories []string `json:"categories"`
+}
